added new files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,48 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <h1>Hello</h1>
+  <nav class="nav">
+      <div class="container">
+       <div class="nav-row">
+         <a href="./index.html" class="logo"><strong>Freelancer</strong> portfolio</a>
+         <ul class="nav-list">
+                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link nav-list__link--active">Главныя</a></li>
+                    <li class="nav-list__item"><a href="./projects.html" class="nav-list__link">Проекты</a></li>
+                    <li class="nav-list__item"><a href="./projects.html" class="nav-list__link">Навыки</a></li>
+                    <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link">Контакты</a></li>
+                </ul>
+      </div>
+    
+  </nav>
+  <header class="header">
+        <div class="header__wrapper">
+            <h1 class="header__title">
+                <strong>Меня зовут<em> Наталья Плескач</em></strong><br>
+                я занимаюсь веб-дизайном и разработкой сайтов
+            </h1>
+            <div class="header__text">
+                <p>«Дизайн - это не просто то, как он выглядит и ощущается. Дизайн - это то, как это работает ».
+
+               - Стив Джобс.</p>
+            </div>
+            <a href="#!" class="btn">Download CV</a>
+        </div>
+    </header>
+    <main class="section">
+        <div class="container">
+
+                <ul class="content-list">
+                    <li class="content-list__item">
+                        <h2 class="title-2">Frontend</h2>
+                        <p>JavaScript, TypeScript, ReactJS, Angular, Redux, HTML, CSS, NPM, BootStrap, MaterialUI, Yarn, TailwindCSS, StyledComponents</p>
+                    </li>
+                    <li class="content-list__item">
+                        <h2 class="title-2">Backend</h2>
+                        <p>NodeJS, MySQL, MongoDB, PHP, Laravel</p>
+                    </li>
+                </ul>
+
+        </div>
+    </main>
 </body>
 </html>
