added new files

--- a/projects.html
+++ b/projects.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freelancer portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <nav class="nav">
         <div class="container">
             <div class="nav-row">
-                <a href="./index.html" class="logo"><strong>Freelancer</strong> portfolio</a>
+                <a href="./index.html" class="logo"><strong>Pl</strong> N</a>
 
                 <button class="dark-mode-btn">
                     <img src="./img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon">
@@ -19,9 +19,10 @@
                 </button>
 
                 <ul class="nav-list">
-                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link ">Home</a></li>
-                    <li class="nav-list__item"><a href="./projects.html" class="nav-list__link nav-list__link--active">Projects</a></li>
-                    <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link">Contacts</a></li>
+                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link ">Главная</a></li>
+                    <li class="nav-list__item"><a href="./projects.html" class="nav-list__link nav-list__link--active">Проекты</a></li>
+                    <li class="nav-list__item"><a href="./skills.html" class="nav-list__link">Навыки</a></li>
+                    <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link">Контакты</a></li>
                 </ul>
             </div>
         </div>
@@ -29,38 +30,38 @@
 
  <main class="section">
         <div class="container">
-            <h2 class="title-1">Projects</h2>
+            <h2 class="title-1">Проекты</h2>
             <ul class="projects">
                 <li class="project">
                     <a href="./project-page.html">
-                        <img src="./img/projects/01.jpg" alt="Project img" class="project__img">
-                        <h3 class="project__title">Gaming streaming portal</h3>
+                        <img src="./img/projects/1.png" alt="Project img" class="project__img">
+                        <h3 class="project__title">Дизайн магазина цветов</h3>
                     </a>
                 </li>
                 <li class="project">
                     <a href="./project-page.html">
-                        <img src="./img/projects/02.jpg" alt="Project img" class="project__img">
-                        <h3 class="project__title">Video service</h3>
+                        <img src="./img/projects/2.png" alt="Project img" class="project__img">
+                        <h3 class="project__title">Списк с использованием Vue.js </h3>
                     </a>
                 </li>
                 <li class="project">
                     <a href="./project-page.html">
-                        <img src="./img/projects/03.jpg" alt="Project img" class="project__img">
-                        <h3 class="project__title">Video portal</h3>
+                        <img src="./img/projects/3.png" alt="Project img" class="project__img">
+                        <h3 class="project__title">Калькулятор</h3>
                     </a>
                 </li>
 
                 <li class="project">
-                    <img src="./img/projects/04.jpg" alt="Project img" class="project__img">
-                    <h3 class="project__title">Dating app</h3>
+                    <img src="./img/projects/4.png" alt="Project img" class="project__img">
+                    <h3 class="project__title">Верстка сайта 1</h3>
                 </li>
                 <li class="project">
-                    <img src="./img/projects/05.jpg" alt="Project img" class="project__img">
-                    <h3 class="project__title">Landing</h3>
+                    <img src="./img/projects/5.png" alt="Project img" class="project__img">
+                    <h3 class="project__title">Верстка сайта 2</h3>
                 </li>
                 <li class="project">
-                    <img src="./img/projects/06.jpg" alt="Project img" class="project__img">
-                    <h3 class="project__title">Gaming community</h3>
+                    <img src="./img/projects/6.png" alt="Project img" class="project__img">
+                    <h3 class="project__title">О бо мне</h3>
                 </li>
 
             </ul>
@@ -71,14 +72,14 @@
         <div class="container">
             <div class="footer__wrapper">
                 <ul class="social">
-                    <li class="social__item"><a href="#!"><img src="./img/icons/vk.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="./img/icons/instagram.svg" alt="Link"></a></li>
+                    <li class="social__item"><a href="https://vk.com/id256249409"><img src="./img/icons/vk.svg" alt="Link"></a></li>
+                    <li class="social__item"><a href="https://instagram.com/natalia_pleskach?igshid=MzMyNGUyNmU2YQ=="><img src="./img/icons/instagram.svg" alt="Link"></a></li>
                     <li class="social__item"><a href="#!"><img src="./img/icons/twitter.svg" alt="Link"></a></li>
-                    <li class="social__item"><a href="#!"><img src="./img/icons/gitHub.svg" alt="Link"></a></li>
+                    <li class="social__item"><a href="https://github.com"><img src="./img/icons/gitHub.svg" alt="Link"></a></li>
                     <li class="social__item"><a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link"></a></li>
                 </ul>
                 <div class="copyright">
-                    <p>© 2022 frontend-dev.com</p>
+                    <p>© 2023 frontend-dev.com</p>
                 </div>
             </div>
         </div>
