--- a/skills.html
+++ b/skills.html
@@ -19,33 +19,29 @@
                 </button>
 
                 <ul class="nav-list">
-                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link ">Главная</a></li>
-                    <li class="nav-list__item"><a href="./projects.html" class="nav-list__link nav-list__link--active">Проекты</a></li>
+                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link">Главная</a></li>
+                    <li class="nav-list__item"><a href="./projects.html" class="nav-list__link">Проекты</a></li>
                     <li class="nav-list__item"><a href="./skills.html" class="nav-list__link">Навыки</a></li>
-                    <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link">Контакты</a></li>
+                    <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link nav-list__link--active">Контакты</a></li>
                 </ul>
             </div>
-        </div>
+            </div>
     </nav>
 
     <main class="section">
         <div class="container">
-            <div class="project-details">
+                <h1 class="title-1">Навыки</h1>
 
-                <h1 class="title-1">Video service</h1>
+                <ul class="content-list">
+                    <li class="content-list__item">
+                        <h2 class="title-2">Я начинающий Frontend-разработчик.</h2>
+                        <p>Изучила такие дисциплины как - Основы разработки сайтов, основные инструменты работы c UI/UX аналитикой, 
+                          верстка сайтов (HTML5+CSS3), Разработка сайтов на основе CMS, Программирование на языке JavaScript, Базы данных и SQL, Разработка сайтов на фреймворках.
+                          Умею работать в программе Figma, верстать страницы на HTML и CSS с использованием JS, владею навыками разработки,
+                          создания сайта с нуля на основе CMC, работы с базами данных MySQL, работы с хостингом.</p>
+                     </li>
+                </ul>
 
-                <img src="./img/projects/02-big.jpg" alt="" class="project-details__cover">
-
-                <div class="project-details__desc">
-                    <p>Skills: React, Node.js, MongoDB</p>
-                </div>
-
-                <a href="#!" class="btn-outline">
-                    <img src="./img/icons/gitHub-black.svg" alt="">
-                    GitHub repo
-                </a>
-
-            </div>
         </div>
     </main>
 
