added new files

--- a/contacts.html
+++ b/contacts.html
@@ -61,7 +61,7 @@
                     <li class="social__item"><a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link"></a></li>
                 </ul>
                 <div class="copyright">
-                    <p>© 2023 frontend-dev.com</p>
+                    <p>© 2023 frontend</p>
                 </div>
             </div>
         </div>
