--- a/projects.html
+++ b/projects.html
@@ -33,35 +33,41 @@
             <h2 class="title-1">Проекты</h2>
             <ul class="projects">
                 <li class="project">
-                    <a href="./project-page.html">
+                    <a href="https://www.figma.com/proto/YqhjvI8eud44oyrMCHCTJu/%D0%9D%D0%B0%D1%82%D0%B0%D0%BB%D1%8C%D1%8F-%D0%9F%D0%BB%D0%B5%D1%81%D0%BA%D0%B0%D1%87?type=design&node-id=9-4&t=ty0GEenLUJL8YJda-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=9%3A4&mode=design">
                         <img src="./img/projects/1.png" alt="Project img" class="project__img">
                         <h3 class="project__title">Дизайн магазина цветов</h3>
                     </a>
                 </li>
                 <li class="project">
-                    <a href="./project-page.html">
+                    <a href="https://github.com/natapleskach/vue-7.git">
                         <img src="./img/projects/2.png" alt="Project img" class="project__img">
-                        <h3 class="project__title">Списк с использованием Vue.js </h3>
+                        <h3 class="project__title">Список с использованием Vue.js </h3>
                     </a>
                 </li>
                 <li class="project">
-                    <a href="./project-page.html">
+                    <a href="https://github.com/natapleskach/calculator.git">
                         <img src="./img/projects/3.png" alt="Project img" class="project__img">
                         <h3 class="project__title">Калькулятор</h3>
                     </a>
                 </li>
 
                 <li class="project">
+                    <a href="https://github.com/natapleskach/layout-Pleskach.git">
                     <img src="./img/projects/4.png" alt="Project img" class="project__img">
                     <h3 class="project__title">Верстка сайта 1</h3>
+                </a>
                 </li>
                 <li class="project">
+                    <a href="https://github.com/natapleskach/layout-Pleskach.git">
                     <img src="./img/projects/5.png" alt="Project img" class="project__img">
                     <h3 class="project__title">Верстка сайта 2</h3>
+                </a>
                 </li>
                 <li class="project">
-                    <img src="./img/projects/6.png" alt="Project img" class="project__img">
-                    <h3 class="project__title">О бо мне</h3>
+                    <a href="./project-page.html">
+                     <img src="./img/projects/6.png" alt="Project img" class="project__img">
+                     <h3 class="project__title">О бо мне</h3>
+                    </a>
                 </li>
 
             </ul>
@@ -79,7 +85,7 @@
                     <li class="social__item"><a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link"></a></li>
                 </ul>
                 <div class="copyright">
-                    <p>© 2023 frontend-dev.com</p>
+                    <p>© 2023 frontend</p>
                 </div>
             </div>
         </div>
