--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          </button>
          
                 <ul class="nav-list">
-                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link nav-list__link--active">Главныя</a></li>
+                    <li class="nav-list__item"><a href="./index.html" class="nav-list__link nav-list__link--active">Главная</a></li>
                     <li class="nav-list__item"><a href="./projects.html" class="nav-list__link">Проекты</a></li>
                     <li class="nav-list__item"><a href="./skills.html" class="nav-list__link">Навыки</a></li>
                     <li class="nav-list__item"><a href="./contacts.html" class="nav-list__link">Контакты</a></li>
@@ -70,7 +70,7 @@
                     <li class="social__item"><a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link"></a></li>
                 </ul>
                 <div class="copyright">
-                    <p>© 2023 frontend-dev.com</p>
+                    <p>© 2023 frontend</p>
                 </div>
             </div>
         </div>
