--- a/skills.html
+++ b/skills.html
@@ -32,8 +32,8 @@
         <div class="container">
                 <h1 class="title-1">Навыки</h1>
 
-                <ul class="content-list">
-                    <li class="content-list__item">
+                <ul class="skills-list">
+                    <li class="skills-list__item">
                         <h2 class="title-2">Я начинающий Frontend-разработчик.</h2>
                         <p>Изучила такие дисциплины как - Основы разработки сайтов, основные инструменты работы c UI/UX аналитикой, 
                           верстка сайтов (HTML5+CSS3), Разработка сайтов на основе CMS, Программирование на языке JavaScript, Базы данных и SQL, Разработка сайтов на фреймворках.
@@ -56,7 +56,7 @@
                     <li class="social__item"><a href="#!"><img src="./img/icons/linkedIn.svg" alt="Link"></a></li>
                 </ul>
                 <div class="copyright">
-                    <p>© 2023 frontend-dev.com</p>
+                    <p>© 2023 frontend</p>
                 </div>
             </div>
         </div>
